@@ -1,3 +1,6 @@
+Upcoming:
+- Builder fixes (todo...)
+
 2.1.2-beta:
 - The Builder can build in water again
 - Fixed a problem with the energy level not showing in the shield projector GUI (it worked fine, it just didn't show)
